# metagames

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 467129c6578d_create_games_and_platforms_models.py  95c8008aaaaa_update_at_auto_update.py  a97b4cda5c50_create_users_table.py  fceafe0ed21f_fixes_games_platforms_relationship.py
src/: conftest.py  main.py  routes.py  settings.py
src/domains/authentication/: routes.py
src/domains/authentication/exceptions/: authentication_exceptions.py  authentications_exceptions_http.py
src/domains/authentication/use_cases/: get_user_if_authenticated_use_case.py  login_use_case.py
src/domains/games/: entities.py  models.py  routes.py
src/domains/games/repositories/: platform_repository.py  platform_repository_alchemy.py
src/domains/games/use_cases/: create_platform_use_case.py
src/domains/users/: entities.py  models.py  routes.py
src/domains/users/exceptions/: user_exceptions.py  user_exceptions_http.py
src/domains/users/repositories/: user_repository.py  user_repository_orm.py
src/domains/users/use_cases/: create_user_use_case.py  get_user_by_id_use_case.py
src/infrastructure/: db.py
src/resources/abstracts/: entities.py  models.py  use_case.py
src/resources/password_hasher/: password_hasher.py  password_hasher_bcrypt.py
src/resources/providers/exceptions_provider/: exceptions_provider.py  exceptions_provider_http.py
src/resources/providers/jwt_provider/: jwt_provider.py  (+1 more)
src/resources/tests/: db_setups.py  use_cases_setups.py  user_setups.py
(+12 files in other folders)
