[project]
name = "metagamesapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Silva Freire",email = "rafaelsilvafreire2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "metagamesapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
